--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,7 @@ A Rails application that collects and monitors data from systems you manage.
 
 == Purpose
 
-This application was created with **Hard Drive monitoring** in mind. It is meant for monitoring several dozen drives that live in a dozen-or-so machines, with agents or cron scripts running on each machine. This code is posted here in case you may find it useful; keep in mind that it was designed for a specific and personal use.
+This application was created with <b>Hard Drive monitoring</b> in mind. It is meant for monitoring several dozen drives that live in a dozen-or-so machines, with agents or cron scripts running on each machine. This code is posted here in case you may find it useful; keep in mind that it was designed for a specific and personal use.
 
 == License & Warranty
 
